Start building entire library with cabal.

--- a/fluidsynth.cabal
+++ b/fluidsynth.cabal
@@ -16,6 +16,7 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 library
-  -- exposed-modules:     
+  exposed-modules:     Sound.Fluidsynth.Internal.Synth
   -- other-modules:       
   build-depends:       base ==4.5.*
+  extra-libraries:     fluidsynth
