--- a/fluidsynth.cabal
+++ b/fluidsynth.cabal
@@ -16,7 +16,9 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 library
-  exposed-modules:     Sound.Fluidsynth
+  exposed-modules:     Sound.Fluidsynth.Internal
   -- other-modules:       
-  build-depends:       base ==4.5.*
+  build-depends:       base >= 3 && < 5,
+                       bindings-DSL >= 1.0.6 && < 1.1
   extra-libraries:     fluidsynth
+  extensions:          ForeignFunctionInterface
